[gd_scene load_steps=27 format=2]

[ext_resource path="res://roguelike_tilesheet.tres" type="TileSet" id=1]
[ext_resource path="res://assets/hero/elf_m_idle_anim_f2.png" type="Texture" id=2]
[ext_resource path="res://scripts/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/hero/elf_m_run_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://assets/hero/elf_m_run_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://assets/hero/elf_m_run_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://assets/hero/elf_m_idle_anim_f3.png" type="Texture" id=7]
[ext_resource path="res://assets/hero/elf_m_idle_anim_f1.png" type="Texture" id=8]
[ext_resource path="res://assets/hero/elf_m_hit_anim_f0.png" type="Texture" id=9]
[ext_resource path="res://assets/hero/elf_m_run_anim_f3.png" type="Texture" id=10]
[ext_resource path="res://assets/hero/elf_m_idle_anim_f0.png" type="Texture" id=11]
[ext_resource path="res://scripts/KickPlayer.gd" type="Script" id=12]
[ext_resource path="res://scripts/Aimer.gd" type="Script" id=13]
[ext_resource path="res://scripts/Health.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/football/ball3.png" type="Texture" id=15]
[ext_resource path="res://scripts/BallIndicator.gd" type="Script" id=16]
[ext_resource path="res://assets/football/ball4.png" type="Texture" id=17]
[ext_resource path="res://assets/football/ball6.png" type="Texture" id=18]
[ext_resource path="res://assets/football/ball1.png" type="Texture" id=19]
[ext_resource path="res://assets/football/ball2.png" type="Texture" id=20]
[ext_resource path="res://assets/football/ball5.png" type="Texture" id=21]
[ext_resource path="res://scripts/KickGame.gd" type="Script" id=22]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.6

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.98052, 9.52416 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 18 ) ],
"loop": true,
"name": "roll",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="KickDungeon" type="Node2D"]
script = ExtResource( 22 )

[node name="TileMap_Floor" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 2147483648
format = 1
tile_data = PoolIntArray( 0, 2, 131074, 1, 2, 131075, 2, 2, 131075, 3, 2, 131075, 4, 2, 131075, 5, 2, 131075, 6, 2, 131075, 7, 2, 131075, 8, 2, 131075, 9, 2, 131075, 10, 2, 131075, 11, 2, 131075, 12, 2, 131075, 13, 2, 131075, 14, 2, 131075, 15, 2, 131075, 16, 2, 131075, 17, 2, 131075, 18, 2, 131075, 19, 2, 131076, 65536, 2, 196610, 65537, 2, 196611, 65538, 2, 196611, 65539, 2, 196611, 65540, 2, 196611, 65541, 2, 196611, 65542, 2, 196611, 65543, 2, 196611, 65544, 2, 196611, 65545, 2, 196611, 65546, 2, 196611, 65547, 2, 196611, 65548, 2, 196611, 65549, 2, 196611, 65550, 2, 196611, 65551, 2, 196611, 65552, 2, 196611, 65553, 2, 196611, 65554, 2, 196611, 65555, 2, 196612, 131072, 2, 196610, 131073, 2, 196611, 131074, 2, 196611, 131075, 2, 196611, 131076, 2, 196611, 131077, 2, 196611, 131078, 2, 196611, 131079, 2, 196611, 131080, 2, 196611, 131081, 2, 196611, 131082, 2, 196611, 131083, 2, 196611, 131084, 2, 196611, 131085, 2, 196611, 131086, 2, 196611, 131087, 2, 196611, 131088, 2, 196611, 131089, 2, 196611, 131090, 2, 196611, 131091, 2, 196612, 196608, 2, 196610, 196609, 2, 196611, 196610, 2, 196611, 196611, 2, 196611, 196612, 2, 196611, 196613, 2, 196611, 196614, 2, 196611, 196615, 2, 196611, 196616, 2, 196611, 196617, 2, 196611, 196618, 2, 196611, 196619, 2, 196611, 196620, 2, 196611, 196621, 2, 196611, 196622, 2, 196611, 196623, 2, 196611, 196624, 2, 196611, 196625, 2, 196611, 196626, 2, 196611, 196627, 2, 196612, 262144, 2, 196610, 262145, 2, 196611, 262146, 2, 196611, 262147, 2, 196611, 262148, 2, 196611, 262149, 2, 196611, 262150, 2, 196611, 262151, 2, 196611, 262152, 2, 196611, 262153, 2, 196611, 262154, 2, 196611, 262155, 2, 196611, 262156, 2, 196611, 262157, 2, 196611, 262158, 2, 196611, 262159, 2, 196611, 262160, 2, 196611, 262161, 2, 196611, 262162, 2, 196611, 262163, 2, 196612, 327680, 2, 196610, 327681, 2, 196611, 327682, 2, 196611, 327683, 2, 196611, 327684, 2, 196611, 327685, 2, 196611, 327686, 2, 196611, 327687, 2, 196611, 327688, 2, 196611, 327689, 2, 196611, 327690, 2, 196611, 327691, 2, 196611, 327692, 2, 196611, 327693, 2, 196611, 327694, 2, 196611, 327695, 2, 196611, 327696, 2, 196611, 327697, 2, 196611, 327698, 2, 196611, 327699, 2, 196612, 393216, 2, 196610, 393217, 2, 196611, 393218, 2, 196611, 393219, 2, 196611, 393220, 2, 196611, 393221, 2, 196611, 393222, 2, 196611, 393223, 2, 196611, 393224, 2, 196611, 393225, 2, 196611, 393226, 2, 196611, 393227, 2, 196611, 393228, 2, 196611, 393229, 2, 196611, 393230, 2, 196611, 393231, 2, 196611, 393232, 2, 196611, 393233, 2, 196611, 393234, 2, 196611, 393235, 2, 196612, 458752, 2, 196610, 458753, 2, 196611, 458754, 2, 196611, 458755, 2, 196611, 458756, 2, 196611, 458757, 2, 196611, 458758, 2, 196611, 458759, 2, 196611, 458760, 2, 196611, 458761, 2, 196611, 458762, 2, 196611, 458763, 2, 196611, 458764, 2, 196611, 458765, 2, 196611, 458766, 2, 196611, 458767, 2, 196611, 458768, 2, 196611, 458769, 2, 196611, 458770, 2, 196611, 458771, 2, 196612, 524288, 2, 196610, 524289, 2, 196611, 524290, 2, 196611, 524291, 2, 196611, 524292, 2, 196611, 524293, 2, 196611, 524294, 2, 196611, 524295, 2, 196611, 524296, 2, 196611, 524297, 2, 196611, 524298, 2, 196611, 524299, 2, 196611, 524300, 2, 196611, 524301, 2, 196611, 524302, 2, 196611, 524303, 2, 196611, 524304, 2, 196611, 524305, 2, 196611, 524306, 2, 196611, 524307, 2, 196612, 589824, 2, 196610, 589825, 2, 196611, 589826, 2, 196611, 589827, 2, 196611, 589828, 2, 196611, 589829, 2, 196611, 589830, 2, 196611, 589831, 2, 196611, 589832, 2, 196611, 589833, 2, 196611, 589834, 2, 196611, 589835, 2, 196611, 589836, 2, 196611, 589837, 2, 196611, 589838, 2, 196611, 589839, 2, 196611, 589840, 2, 196611, 589841, 2, 196611, 589842, 2, 196611, 589843, 2, 196612, 655360, 2, 196610, 655361, 2, 196611, 655362, 2, 196611, 655363, 2, 196611, 655364, 2, 196611, 655365, 2, 196611, 655366, 2, 196611, 655367, 2, 196611, 655368, 2, 196611, 655369, 2, 196611, 655370, 2, 196611, 655371, 2, 196611, 655372, 2, 196611, 655373, 2, 196611, 655374, 2, 196611, 655375, 2, 196611, 655376, 2, 196611, 655377, 2, 196611, 655378, 2, 196611, 655379, 2, 196612, 720896, 2, 196610, 720897, 2, 196611, 720898, 2, 196611, 720899, 2, 196611, 720900, 2, 196611, 720901, 2, 196611, 720902, 2, 196611, 720903, 2, 196611, 720904, 2, 196611, 720905, 2, 196611, 720906, 2, 196611, 720907, 2, 196611, 720908, 2, 196611, 720909, 2, 196611, 720910, 2, 196611, 720911, 2, 196611, 720912, 2, 196611, 720913, 2, 196611, 720914, 2, 196611, 720915, 2, 196612, 786432, 2, 262146, 786433, 2, 262147, 786434, 2, 262147, 786435, 2, 262147, 786436, 2, 262147, 786437, 2, 262147, 786438, 2, 262147, 786439, 2, 262147, 786440, 2, 262147, 786441, 2, 262147, 786442, 2, 262147, 786443, 2, 262147, 786444, 2, 262147, 786445, 2, 262147, 786446, 2, 262147, 786447, 2, 262147, 786448, 2, 262147, 786449, 2, 262147, 786450, 2, 262147, 786451, 2, 262148 )

[node name="TileMap_Wall" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_use_kinematic = true
collision_bounce = 0.76
collision_layer = 2147483649
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 2, 2, 3, 2, 3, 3, 2, 4, 3, 2, 5, 3, 0, 6, 3, 2, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 2, 12, 3, 2, 13, 3, 2, 14, 3, 2, 15, 3, 0, 16, 3, 2, 17, 3, 2, 18, 3, 0, 19, 3, 0, 65536, 3, 1, 65555, 3, 1, 131072, 3, 1, 131091, 3, 3, 196608, 3, 3, 196627, 3, 3, 262144, 3, 1, 262163, 3, 1, 327680, 3, 3, 327685, 2, 327683, 327699, 3, 1, 393216, 3, 1, 393222, 2, 327683, 393235, 3, 3, 458752, 3, 1, 458771, 3, 3, 524288, 3, 3, 524307, 3, 3, 589824, 3, 3, 589843, 3, 3, 655360, 3, 3, 655379, 3, 1, 720896, 3, 3, 720915, 3, 1, 786432, 3, 0, 786433, 3, 2, 786434, 3, 0, 786435, 3, 0, 786436, 3, 2, 786437, 3, 0, 786438, 3, 2, 786439, 3, 2, 786440, 3, 0, 786441, 3, 2, 786442, 3, 0, 786443, 3, 2, 786444, 3, 0, 786445, 3, 0, 786446, 3, 2, 786447, 3, 0, 786448, 3, 2, 786449, 3, 0, 786450, 3, 2, 786451, 3, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="Aimer" type="Node2D" parent="."]
position = Vector2( 200, 100 )
script = ExtResource( 13 )
color = Color( 0.2, 0.976471, 0.301961, 1 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 249.5, 160.307 )
collision_layer = 0
collision_mask = 15
physics_material_override = SubResource( 1 )
linear_damp = 0.6

[node name="KickButton" type="Button" parent="."]
margin_left = 115.0
margin_top = 160.5
margin_right = 214.0
margin_bottom = 180.5
custom_colors/font_color_disabled = Color( 0.12549, 1, 0.345098, 1 )
text = "Kick!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 200, 100 )
input_pickable = true
collision_layer = 2
collision_mask = 0
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 2 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 4.287 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2( 0, 4.287 )
shape = SubResource( 3 )

[node name="EnemyTween" type="Tween" parent="."]

[node name="PlayerMoveTween" type="Tween" parent="."]

[node name="Heart" parent="." instance=ExtResource( 14 )]
margin_left = -0.100006
margin_top = -10.7
margin_right = -0.100006
margin_bottom = -10.7

[node name="BallIndicator" type="AnimatedSprite" parent="."]
position = Vector2( 310.783, 8.35599 )
scale = Vector2( 0.179206, 0.179206 )
frames = SubResource( 4 )
animation = "idle"
script = ExtResource( 16 )

[node name="PlayerDied" type="Panel" parent="."]
visible = false
light_mask = -2147483647
margin_left = 13.5
margin_top = 10.75
margin_right = 308.5
margin_bottom = 197.75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerDied"]
margin_left = 34.0
margin_top = 32.25
margin_right = 268.0
margin_bottom = 72.25
text = "Death has blown the final whistle!"
[connection signal="state_change" from="." to="BallIndicator" method="_on_KickDungeon_state_change"]
[connection signal="button_up" from="KickButton" to="." method="_on_KickButton_button_up"]
[connection signal="input_event" from="Player" to="Player" method="_on_Player_input_event"]
[connection signal="selected" from="Player" to="." method="_on_Player_selected"]
